testsuite/tests/typecheck/should_fail/T16627.stderr

T16627.hs:11:15: error:
    ‚ÄĘ No instance for (Typeable r1) required by a use of ‚ÄėtypeRep‚Äô
    ‚ÄĘ In the first argument of ‚ÄėmkTrApp‚Äô, namely ‚ÄėtypeRep‚Äô
      In the first argument of ‚ÄėmkTrApp‚Äô, namely ‚ÄėtypeRep `mkTrApp` a‚Äô
      In the expression: typeRep `mkTrApp` a `mkTrApp` b
